--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #################################### common config : ####################################
 spring.application.name=railway_ec_system
 # 应用服务web访问端口
-server.port=80
+server.port=8080
 # ActuatorWeb访问端口
 management.server.port=8081
 management.endpoints.jmx.exposure.include=*
@@ -12,7 +12,10 @@ management.endpoint.health.show-details=always
 alibaba.cloud.access-key=****
 alibaba.cloud.secret-key=****
 
-
+# 访问template下的html文件需要配置模板，映射
+spring.thymeleaf.prefix.classpath:/templates
+# 开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.prefix.cache: false
 
 
 #外网地址
