--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
             <version>1.1.9</version>
         </dependency>
 
+        <!-- JSON转换包 -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+
     </dependencies>
 
 
